# ai-learn

qwen_fc_demo/: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
qwen_fc_demo/src/: paper-mcp.py  paper.py  utils.py
